@startuml classes

skinparam class {
    BackgroundColor<<interface>> LightBlue
    BorderColor Black
    ArrowColor Black
    FontSize 12
}

' Описание классов
class Environment {
    - vars_: map<string, string>
    + set(name, value)
    + get(name)
    + snapshot()
    + fromProcessEnvironment()
}

class Token {
    - text: string
    - type: Type
    + Type: WORD, PIPE, EOL
}

class Tokenizer {
    + tokenize(line)
    + tokenizeWithPipesAndExpansion(line, env)
}

class Parser {
    + parse(tokens)
}

class CommandNode {
    - assignments: vector<AssignmentNode>
    - words: vector<string>
}

class AssignmentNode {
    - name: string
    - value: string
}

class PipelineNode {
    - commands: vector<CommandNode>
}

class ExecPipeline {
    - stages: vector<CommandInvocation>
}

class CommandInvocation {
    - program: string
    - argv: vector<string>
    - envOverlay: map<string,string>
}

class Executor {
    + execute(stages, shell, out, err)
}

class Shell {
    + run(in, out, err)
    + executeLine(line, out, err)
    + executeArgv(argv, io)
    + env()
    + tryHandleAssignmentsOnly(argv, err)
    + builtinExit()
    + builtinPwd(io)
    + builtinEcho(argv, io)
    + builtinCat(argv, io)
    + builtinWc(argv, io)
    + runExternal(argv, err)
}

class Grep {
    + execute(argv, io)
}

note right of Shell
    Встроенные команды:
    - cat
    - echo
    - wc
    - pwd
    - exit
    - grep
end note

' Связи
Shell --> Environment : использует
Shell --> Tokenizer : токенизация
Shell --> Parser : парсинг
Shell --> Executor : выполнение

Tokenizer --> Token : возвращает
Parser --> CommandNode : строит
Parser --> PipelineNode : строит
Executor --> CommandInvocation : формирует
Executor --> Shell : для env()

CommandNode --> AssignmentNode
CommandNode --> PipelineNode
CommandInvocation --> ExecPipeline

Shell --> CommandNode : для выполнения
Shell --> PipelineNode : для выполнения

@enduml